fix(java-records): nested-polymorphism supertypes, empty-permits guard, DRY discriminator block
A records-mode sealed base that is itself nested in another polymorphic
relation (a oneOf member, or the allOf-child of a further base) emitted a
`permits` clause but no `extends`, so javac rejected the outer interface's
permits clause. buildSealedInterface now derives its supertypes from the
same helper the concrete records use (ancestorInterfaces, renamed from
recordSuperinterfaces), keeping permits and implements consistent.

Also: guard against an empty-permits sealed interface (emit a plain
interface when no subtypes are visible), and extract the duplicated
discriminator @JsonTypeInfo/@JsonSubTypes block into a shared helper used
by both the class-based path and the sealed interface (class-path output
byte-for-byte unchanged).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01KoMya9sFXxWZv2qXfcJoD4